--- a/HITSW/HITSW/Views/Shared/_Layout.cshtml
+++ b/HITSW/HITSW/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                                 <li>@Html.ActionLink("Geographical Group", "Index", "AddrBkGeographicalGroup")</li>
                             </ul>
                           </li>
+                          <li>@Html.ActionLink("DataTables", "Index", "DataTables")</li>
                       </ul>
                   </div>
               </div>
